[gd_scene load_steps=22 format=3 uid="uid://uypbixq1k6fp"]

[ext_resource type="Script" path="res://scenes/Level.gd" id="1_jp16r"]
[ext_resource type="PackedScene" uid="uid://dqnxcoy0i2p7i" path="res://scenes/levels/level1-exploring.tscn" id="2_l0q4j"]
[ext_resource type="PackedScene" uid="uid://bvl313stp1sie" path="res://scenes/levels/level1-thinking.tscn" id="3_h75oy"]
[ext_resource type="Texture2D" uid="uid://dnytko5p4g8l3" path="res://assets/graphics/main.png" id="6_cwkka"]
[ext_resource type="PackedScene" uid="uid://nbaodrlopo7y" path="res://ui/components/GameSettings.tscn" id="6_nyhrt"]
[ext_resource type="Theme" uid="uid://d22mpqutkotsu" path="res://ui/theme.tres" id="7_p5uwy"]
[ext_resource type="PackedScene" uid="uid://cqqihht5r6kev" path="res://scenes/ui/ClueContainer.tscn" id="7_sos6n"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/FadeOverlay.tscn" id="8_5iagk"]
[ext_resource type="Texture2D" uid="uid://ctg12u5hqkcam" path="res://assets/graphics/GUI.png" id="8_eiybe"]
[ext_resource type="AudioStream" uid="uid://dlchk3c1baiy8" path="res://assets/music/corgie-title.ogg" id="9_wj5qj"]
[ext_resource type="AudioStream" uid="uid://bipof8v3kmmyt" path="res://assets/music/jingles_STEEL12.ogg" id="10_imjsh"]
[ext_resource type="AudioStream" uid="uid://bhbt87e1mo5iw" path="res://assets/music/jingles_PIZZI09.ogg" id="11_tkj1k"]
[ext_resource type="AudioStream" uid="uid://mgiy6a2kcdjm" path="res://assets/music/jingles_STEEL07.ogg" id="12_7glrd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hfr2h"]
atlas = ExtResource("8_eiybe")
region = Rect2(70, 83, 4, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajckx"]
atlas = ExtResource("8_eiybe")
region = Rect2(85, 84, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccwlu"]
atlas = ExtResource("8_eiybe")
region = Rect2(53, 68, 6, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpgpb"]
atlas = ExtResource("8_eiybe")
region = Rect2(49, 97, 30, 30)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j1ouj"]
texture = SubResource("AtlasTexture_jpgpb")
texture_margin_left = 9.0
texture_margin_top = 9.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fvm64"]
atlas = ExtResource("8_eiybe")
region = Rect2(132, 35, 7, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tkfo"]
atlas = ExtResource("8_eiybe")
region = Rect2(0, 96, 48, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bgheb"]
texture = SubResource("AtlasTexture_5tkfo")
texture_margin_left = 9.0
texture_margin_top = 12.0
texture_margin_right = 9.0
texture_margin_bottom = 9.0

[node name="Level" type="Node2D"]
script = ExtResource("1_jp16r")

[node name="UI" type="CanvasLayer" parent="."]

[node name="LevelCustomContent" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Exploring" parent="UI/LevelCustomContent" instance=ExtResource("2_l0q4j")]
unique_name_in_owner = true

[node name="HintButton" type="Button" parent="UI/LevelCustomContent/Exploring"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1808.0
offset_top = 16.0
offset_right = 1840.0
offset_bottom = 48.0
focus_mode = 0
theme = ExtResource("7_p5uwy")
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="UI/LevelCustomContent/Exploring/HintButton"]
layout_mode = 1
anchors_preset = -1
offset_left = 8.0
offset_top = 8.0
offset_right = 24.0
offset_bottom = 24.0
mouse_filter = 2
texture = SubResource("AtlasTexture_hfr2h")
metadata/_edit_use_anchors_ = true

[node name="SettingsButton" type="Button" parent="UI/LevelCustomContent/Exploring"]
layout_mode = 0
offset_left = 1840.0
offset_top = 16.0
offset_right = 1872.0
offset_bottom = 48.0
focus_mode = 0
theme = ExtResource("7_p5uwy")

[node name="TextureRect" type="TextureRect" parent="UI/LevelCustomContent/Exploring/SettingsButton"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 24.0
offset_bottom = 24.0
mouse_filter = 2
texture = SubResource("AtlasTexture_ajckx")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="QuitButton" type="Button" parent="UI/LevelCustomContent/Exploring"]
layout_mode = 0
offset_left = 1872.0
offset_top = 16.0
offset_right = 1904.0
offset_bottom = 48.0
focus_mode = 0
theme = ExtResource("7_p5uwy")

[node name="TextureRect" type="TextureRect" parent="UI/LevelCustomContent/Exploring/QuitButton"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 24.0
offset_bottom = 24.0
mouse_filter = 2
texture = SubResource("AtlasTexture_ccwlu")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Thinking" parent="UI/LevelCustomContent" instance=ExtResource("3_h75oy")]
unique_name_in_owner = true
visible = false

[node name="Credits" type="Control" parent="UI/LevelCustomContent"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AreaPopup" type="PanelContainer" parent="UI/LevelCustomContent/Credits"]
layout_mode = 2
offset_left = 460.0
offset_right = 1460.0
offset_bottom = 872.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_j1ouj")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/LevelCustomContent/Credits/AreaPopup"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/LevelCustomContent/Credits/AreaPopup/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 60

[node name="Label" type="Label" parent="UI/LevelCustomContent/Credits/AreaPopup/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Félicitations"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/LevelCustomContent/Credits/AreaPopup/VBoxContainer"]
layout_mode = 2
texture = ExtResource("6_cwkka")
stretch_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="UI/LevelCustomContent/Credits/AreaPopup/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 60
theme_override_constants/margin_bottom = 60

[node name="Label" type="RichTextLabel" parent="UI/LevelCustomContent/Credits/AreaPopup/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(850, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = 20
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "Vous avez fini \"[url=https://itch.io/jam/make-something-horrible-ledition-des-20-ans]Canad PC: nid d'escrocs[/url]\", un jeu dévelopé pour la gamejam Canard PC \"[url=https://itch.io/jam/make-something-horrible-ledition-des-20-ans]Make Something Horrible, l'édition des 20 ans[/url]\" par [url=https://twitter.com/datoh]@datoh[/url]."
fit_content = true
autowrap_mode = 2

[node name="Clues" type="NinePatchRect" parent="UI"]
custom_minimum_size = Vector2(640, 0)
offset_left = 8.0
offset_top = 888.0
offset_right = 1912.0
offset_bottom = 1072.0
texture = ExtResource("8_eiybe")
region_rect = Rect2(145, 65, 46, 14)
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="Clue1" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 203.0
offset_bottom = 62.0
can_drag = true

[node name="Clue2" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 208.0
offset_top = 16.0
offset_right = 395.0
offset_bottom = 62.0
can_drag = true

[node name="Clue3" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 400.0
offset_top = 16.0
offset_right = 587.0
offset_bottom = 62.0
can_drag = true

[node name="Clue4" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 592.0
offset_top = 16.0
offset_right = 779.0
offset_bottom = 62.0
can_drag = true

[node name="Clue5" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 784.0
offset_top = 16.0
offset_right = 971.0
offset_bottom = 62.0
can_drag = true

[node name="Clue6" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 976.0
offset_top = 16.0
offset_right = 1163.0
offset_bottom = 62.0
can_drag = true

[node name="Clue7" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 1168.0
offset_top = 16.0
offset_right = 1355.0
offset_bottom = 62.0
can_drag = true

[node name="Clue8" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 1360.0
offset_top = 16.0
offset_right = 1547.0
offset_bottom = 62.0
can_drag = true

[node name="Clue9" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 1552.0
offset_top = 16.0
offset_right = 1739.0
offset_bottom = 62.0
can_drag = true

[node name="Clue10" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 72.0
offset_right = 203.0
offset_bottom = 118.0
can_drag = true

[node name="Clue11" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 208.0
offset_top = 72.0
offset_right = 395.0
offset_bottom = 118.0
can_drag = true

[node name="Clue12" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 400.0
offset_top = 72.0
offset_right = 587.0
offset_bottom = 118.0
can_drag = true

[node name="Clue13" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 592.0
offset_top = 72.0
offset_right = 779.0
offset_bottom = 118.0
can_drag = true

[node name="Clue14" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 784.0
offset_top = 72.0
offset_right = 971.0
offset_bottom = 118.0
can_drag = true

[node name="Clue15" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 976.0
offset_top = 72.0
offset_right = 1163.0
offset_bottom = 118.0
can_drag = true

[node name="Clue16" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 1168.0
offset_top = 72.0
offset_right = 1355.0
offset_bottom = 118.0
can_drag = true

[node name="Clue17" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 1360.0
offset_top = 72.0
offset_right = 1547.0
offset_bottom = 118.0
can_drag = true

[node name="Clue18" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 1552.0
offset_top = 72.0
offset_right = 1739.0
offset_bottom = 118.0
can_drag = true

[node name="Clue19" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 128.0
offset_right = 203.0
offset_bottom = 174.0
can_drag = true

[node name="Clue20" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
offset_left = 208.0
offset_top = 128.0
offset_right = 395.0
offset_bottom = 174.0
can_drag = true

[node name="Clue21" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
offset_left = 400.0
offset_top = 128.0
offset_right = 587.0
offset_bottom = 174.0
can_drag = true

[node name="Clue22" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
offset_left = 592.0
offset_top = 128.0
offset_right = 779.0
offset_bottom = 174.0
can_drag = true

[node name="Clue23" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
offset_left = 784.0
offset_top = 128.0
offset_right = 971.0
offset_bottom = 174.0
can_drag = true

[node name="Clue24" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
offset_left = 976.0
offset_top = 128.0
offset_right = 1163.0
offset_bottom = 174.0
can_drag = true

[node name="Clue25" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
offset_left = 1168.0
offset_top = 128.0
offset_right = 1355.0
offset_bottom = 174.0
can_drag = true

[node name="Clue26" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
offset_left = 1360.0
offset_top = 128.0
offset_right = 1547.0
offset_bottom = 174.0
can_drag = true

[node name="Clue27" parent="UI/Clues" groups=["clue"] instance=ExtResource("7_sos6n")]
visible = false
offset_left = 1552.0
offset_top = 128.0
offset_right = 1739.0
offset_bottom = 174.0
can_drag = true

[node name="Switch" type="NinePatchRect" parent="UI"]
offset_left = 728.0
offset_top = 832.0
offset_right = 1192.0
offset_bottom = 896.0
texture = ExtResource("8_eiybe")
region_rect = Rect2(2, 34, 44, 44)
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="ExploringSwitch" type="Control" parent="UI/Switch"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="UI/Switch/ExploringSwitch"]
layout_mode = 0
offset_left = 176.0
offset_right = 190.0
offset_bottom = 16.0
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_fvm64")
stretch_mode = 3

[node name="ExploringLabel" type="Label" parent="UI/Switch/ExploringSwitch"]
layout_mode = 0
offset_left = 32.0
offset_top = 16.0
offset_right = 192.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Exploration"
horizontal_alignment = 1

[node name="ThinkingLabel" type="Label" parent="UI/Switch/ExploringSwitch"]
layout_mode = 0
offset_left = 272.0
offset_top = 16.0
offset_right = 408.0
offset_bottom = 55.0
mouse_filter = 0
theme_override_colors/font_color = Color(0.0941176, 0.0784314, 0.145098, 1)
theme_override_font_sizes/font_size = 24
text = "Refléxion"
horizontal_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="UI/Switch/ExploringSwitch"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ThinkingSwitch" type="Control" parent="UI/Switch"]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="UI/Switch/ThinkingSwitch"]
layout_mode = 0
offset_left = 232.0
offset_right = 246.0
offset_bottom = 16.0
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_fvm64")
stretch_mode = 3
flip_h = true

[node name="ExploringLabel" type="Label" parent="UI/Switch/ThinkingSwitch"]
layout_mode = 0
offset_left = 32.0
offset_top = 16.0
offset_right = 192.0
offset_bottom = 55.0
mouse_filter = 0
theme_override_colors/font_color = Color(0.0941176, 0.0784314, 0.145098, 1)
theme_override_font_sizes/font_size = 24
text = "Exploration"
horizontal_alignment = 1

[node name="ThinkingLabel" type="Label" parent="UI/Switch/ThinkingSwitch"]
layout_mode = 0
offset_left = 272.0
offset_top = 16.0
offset_right = 408.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Refléxion"
horizontal_alignment = 1

[node name="Settings" type="Control" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bgheb")

[node name="CenterContainer" type="CenterContainer" parent="UI/Settings/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SettingsLabel" type="Label" parent="UI/Settings/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Paramètres"

[node name="GameSettings" parent="UI/Settings/Panel/CenterContainer/VBoxContainer" instance=ExtResource("6_nyhrt")]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="UI/Settings/Panel/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7_p5uwy")
text = "Retour"

[node name="FadeOverlay" parent="UI" instance=ExtResource("8_5iagk")]
unique_name_in_owner = true
visible = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_wj5qj")
autoplay = true
bus = &"Music"

[node name="ThinkingOkJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_imjsh")
bus = &"Sound"

[node name="GameDoneJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_7glrd")
bus = &"Sound"

[node name="ClueOkJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_tkj1k")
bus = &"Sound"

[connection signal="toggled" from="UI/LevelCustomContent/Exploring/HintButton" to="." method="_on_hint_button_toggled"]
[connection signal="pressed" from="UI/LevelCustomContent/Exploring/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="UI/LevelCustomContent/Exploring/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="gui_input" from="UI/LevelCustomContent/Credits/AreaPopup" to="." method="_on_credits_popup_gui_input"]
[connection signal="meta_clicked" from="UI/LevelCustomContent/Credits/AreaPopup/VBoxContainer/MarginContainer2/Label" to="." method="_on_credits_meta_clicked"]
[connection signal="gui_input" from="UI/Switch/ExploringSwitch/ThinkingLabel" to="." method="_on_thinking_label_gui_input"]
[connection signal="gui_input" from="UI/Switch/ThinkingSwitch/ExploringLabel" to="." method="_on_exploring_label_gui_input"]
[connection signal="gui_input" from="UI/Settings" to="." method="_on_settings_out_gui_input"]
[connection signal="pressed" from="UI/Settings/Panel/CenterContainer/VBoxContainer/ReturnButton" to="." method="_on_settings_return_button_pressed"]
